Added Filters, Corrected deactivated Cookie Fallback (URL Encoding)

--- a/HomeProject/WebContent/login.html
+++ b/HomeProject/WebContent/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="US-ASCII">
 <title>Login Page</title>
 </head>
 <body>
@@ -14,3 +14,5 @@
 	</form>
 </body>
 </html>
+
+
